[package]
name = "nuklear-backend-vki"
version = "0.1.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>", "Aaron Loucks <aloucks@cofront.net>"]
keywords = ["gui", "interface", "graphics", "vulkan", "vki"]
description = "A VKI drawing backend for Rust wrapper for Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aloucks/nuklear-backend-vki.git"
homepage = "https://github.com/aloucks/nuklear-backend-vki"
edition = "2018"

[lib]
name = "nuklear_backend_vki"
path = "src/lib.rs"

[dependencies]
log = "~0.3"
vki = { version = "0.1", default-features = false, git = "https://github.com/aloucks/vki.git", rev = "328d052" }
nuklear-rust = "~0.6"
#glsl-to-spirv = "~0.1"

#[patch.crates-io]
#ash = { git = "https://github.com/MaikKlein/ash.git", rev = "6d7e4bf" }
